# Br0x0xker

./: README.md  com.brooker.tool.json  meson.build  package-lock.json  package.json
data/: com.brooker.tool.desktop.in  com.brooker.tool.gschema.xml  com.brooker.tool.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: br0x0xker.gresource.xml  br0x0xker.in  filemanupulation.js  index.css  index.html  index.js  main.py  meson.build  preload.js  window.py  window.ui
srcw/: index.html  index.js
